[package]
name = "nsca-importer"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]

[lib]
name = "nsca"

[dependencies]
structopt = "0.2.10"
config = "0.9.0"
log = "0.4"
simplelog = "0.5.2"
serde_derive = "1.0"
serde = "1.0"
tokio = "0.1"
tokio-io = "0.1"
bytes = "0.4.9"
futures = "0.1"
byteorder = "1"